Fix some display bug; Title bar and randomiser page spacing;

--- a/deco3500/css/stylesheet.css
+++ b/deco3500/css/stylesheet.css
@@ -11,10 +11,16 @@ canvas{
     margin:auto;
     display: block;
     margin-top: 20px;
+    margin-bottom: 20px;
   }
 
-  #container{
+#container{
     margin-left: 20%;
     margin-right: 20%;
     margin-top: 20px;
+}
+
+#title{
+    margin:auto;
+    display: block;
 }
